--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ main img {
     border: 1px solid black;
     padding:2px;
     box-shadow: 0 0 30px gray;
+    float: right;
 }
 p {
     padding : 0;
@@ -23,7 +24,6 @@ p {
 main {
     max-width: 840px;
 }
-
 aside {
     width: 20rem;
     margin: 1rem;
@@ -41,4 +41,26 @@ footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* class selector */
+.box{
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 /10%);
+    padding: 1rem;
+    background-color: #ddd;
+    color: #000;
+}
+aside{
+    width: 20em;
+    text-align: center;
+}
+aside h2 {
+    position: absolute;
+    top: 46px;
+    left: 150px;
 }
