--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,12 +1,19 @@
 :root {
---primary-color: #4D4730;
---secondary-color: #4B6858;
---accent1-color: #4B6858;
---accent2-color: #46ACC2;
---heading-font: "oswald", Sans-Serif;
---body-font: "roboto", San-Serif;
+    --primary-color: #4D4730;
+    --secondary-color: #4B6858;
+    --accent1-color: #4B6858;
+    --accent2-color: #46ACC2;
+    --heading-font: "oswald", Sans-Serif;
+    --body-font: "roboto", San-Serif;
 }
+
 header {
+    width: 300px;
+    height: auto;
+    display: grid;
+    float: center;
+    align-items: center;
+    grid-template-columns: 70% 40% 40% 40% 4%;
     background-color: var(--primary-color);
     color: var(--accent2-color);
 }
@@ -15,45 +22,95 @@ header {
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     font-family: var(--body-font);
     color: var(--accent1-color);
 }
-header, main, footer {
 
-    width: 840px;
+header,
+main,
+footer {
+
+    width: 100%;
     margin: 0 auto;
 }
-h1 , h2 {
+
+h1,
+h2 {
     font-family: var(--heading-font);
     color: var(--primary-color)
 }
-nav, p , section , article {
+
+nav,
+p,
+section,
+article {
     margin: 16px;
     padding: 8px;
 }
+
 .socialmedia a {
     text-decoration: none;
 }
+
 .hero {
     position: relative;
 }
+
 .hero img {
-display: block;
-width: 100%;
-height: auto;
+    display: block;
+    width: 100%;
+    height: auto;
 }
+
 h1 {
     position: absolute;
     top: 20xp;
     width: 100%;
-    padding: 16px;
+    padding: 176x;
     text-align: center;
     opacity: 0.7;
     background-color: var(--accent1-color);
     color: #fff;
 }
+
+h2 {
+    text-align: center;
+}
+
 .hero article {
     float: right;
     width: 125px;
+}
+
+article img {
+    float: right;
+    width: 160px;
+    ;
+    height: auto;
+}
+
+section h2 {
+    position: center;
+}
+
+header img {
+    width: 35%;
+    height: auto;
+}
+
+footer p {
+    float: left;
+}
+
+footer nav {
+    float: right;
+}
+
+section img {
+    width: 270px;
+    height: auto;
+    float: center;
+    align-items: center;
 }
